@@ -20,6 +20,7 @@ NEWS
   * [auto* build] simplify autogen.sh, handle automake 1.13 test running (fixes #2490)
   * [mod_userdir] add userdir.active option, "enabled" by default
   * [core] return 501 Not Implemented in static file mode for all methods except GET/POST/HEAD/OPTIONS
+  * [core] recognize more http methods to forward to backends (fixes #2346)
 
 - 1.4.32 - 2012-11-21
   * Code cleanup with clang/sparse (fixes #2437, thx kibi)
